package se.ifmo.route_information_system;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class RouteInformationSystemApplication {

	public static void main(String[] args) {
		SpringApplication.run(RouteInformationSystemApplication.class, args);
	}

}
